--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "razorpay": "^2.9.6",
+    "stripe": "^20.1.0",
     "twilio": "^4.19.0"
   },
   "devDependencies": {
